@@ -32,6 +32,7 @@ endif::[]
 
 [float]
 ===== Bug fixes
+* Fix instrumentation error for HttpClient - {pull}1402[#1402]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
